[package]
name = "advent-of-code"
version = "0.1.0"
authors = ["Jesse Luehrs <doy@tozt.net>"]
edition = "2021"

[dependencies]
advent-of-code-ocr = "0.1.1"
ahash = "0.8.11"
anyhow = "1.0.93"
once_cell = "1.20.2"
paw = "1.0.0"
priority-queue = "2.1.1"
regex = "1.11.1"
structopt = { version = "0.3.26", features = ["paw", "wrap_help"] }

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
paste = "1.0.15"

[[bench]]
name = "2020"
harness = false

[[bench]]
name = "2021"
harness = false

[[bench]]
name = "2022"
harness = false

[[bench]]
name = "2023"
harness = false

[lints.clippy]
cognitive_complexity = "allow"
collapsible_else_if = "allow"
collapsible_if = "allow"
comparison_chain = "allow"
enum_variant_names = "allow"
missing_const_for_fn = "allow"
similar_names = "allow"
struct_excessive_bools = "allow"
too_many_arguments = "allow"
too_many_lines = "allow"
type_complexity = "allow"
