[package]
name = "advent-of-code"
version = "0.1.0"
authors = ["Jesse Luehrs <doy@tozt.net>"]
edition = "2021"

[dependencies]
advent-of-code-ocr = "0.1.1"
ahash = "0.8.12"
anyhow = "1.0.100"
once_cell = "1.21.3"
paw = "1.0.0"
priority-queue = "2.7.0"
rayon = "1.11.0"
regex = { version = "1.12.2", default-features = false, features = ["std", "perf"] }
structopt = { version = "0.3.26", features = ["paw", "wrap_help"] }

[dev-dependencies]
criterion = { version = "0.8.0", features = ["html_reports"] }
paste = "1.0.15"

[[bench]]
name = "2020"
harness = false

[[bench]]
name = "2021"
harness = false

[[bench]]
name = "2022"
harness = false

[[bench]]
name = "2023"
harness = false

[[bench]]
name = "2024"
harness = false

[[bench]]
name = "2025"
harness = false

[lints.clippy]
cognitive_complexity = "allow"
collapsible_else_if = "allow"
collapsible_if = "allow"
comparison_chain = "allow"
enum_variant_names = "allow"
missing_const_for_fn = "allow"
similar_names = "allow"
struct_excessive_bools = "allow"
too_many_arguments = "allow"
too_many_lines = "allow"
type_complexity = "allow"
